...
                      AnimatedBuilder(
                        animation: _logoController,
                        builder: (context, child) {
                          final shadowOffset =
                              sin(_logoController.value * 2 * pi) * 2 + 2;
                          return Text(
                            'ANTIDOTE',
                            style: Theme.of(context)
                                .textTheme
                                .displayLarge
                                ?.copyWith(
                              shadows: [
                                Shadow(
...
                                child: Row(
                                  mainAxisAlignment: MainAxisAlignment.center,
                                  mainAxisSize: MainAxisSize.min,
                                  children: [
                                    Flexible(
                                      child: Text(
                                        'REVEAL MY DESTINY',
                                        style: Theme.of(context)
                                            .textTheme
                                            .bodyMedium
                                            ?.copyWith(
                                              color: Colors.white,
                                              fontWeight: FontWeight.w600,
...
