...
      height: 60,
      child: Row(
        mainAxisAlignment: MainAxisAlignment.spaceAround,
        children: [
          _buildTabItem(context, Icons.home, 'Home', '/', currentLocation),
          _buildTabItem(context, Icons.bar_chart, 'Analysis', '/analysis', currentLocation),
          _buildTabItem(context, Icons.sports_mma, 'Battle', '/battle', currentLocation),
          _buildTabItem(context, Icons.person, 'Profile', '/profile', currentLocation),
        ],
      ),
    );
  }

...
